Fix readability of various links

--- a/styles/2_style.styl
+++ b/styles/2_style.styl
@@ -293,7 +293,7 @@ a
 .subcontent
   padding 32px
   doFlex 2
-  opacity .5
+  opacity .7
 
   h2
     text-transform uppercase
@@ -302,10 +302,8 @@ a
     &:first-child
       margin-top 0
   a
-    opacity .8
-    border-bottom none
     &:hover
-      border-bottom solid 1px rgba(255,255,255,.7)
+      border-bottom solid 1px qColor
   ul
     margin 0
     padding 0 0 0 1rem
