--- a/styles/3_aboutq42.styl
+++ b/styles/3_aboutq42.styl
@@ -148,10 +148,9 @@
   a
     font-size smaller
     opacity 1
-    background-color rgba(255,255,255,.1)
+    border-bottom none
+    margin-right 4px
     &:hover
-      background-color rgba(255,255,255,.3)
       text-decoration none
     &.selected
-      text-decoration underline
-      background-color rgba(255,255,255,.3)
+      border-bottom solid 2px qColor
